--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -9,12 +9,10 @@
 
 
 # Display output
-monitor=HDMI-A-2,1920x1080,1280x0,1
-monitor=HDMI-A-1,1280x1024,0x0,1
+monitor=eDP-1,1920x1080,0x0,1
 
 # Some default env vars.
 env = XCURSOR_SIZE,24
-
 input {
     kb_layout = us
     kb_variant =
@@ -32,24 +30,21 @@ input {
 }
 
 general {
-    cursor_inactive_timeout = 5
-    gaps_in = 10
-    gaps_out = 15
-    border_size = 3
-    col.active_border = rgb(9c27b0) rgb(00bcd4) 125deg
-    col.inactive_border = rgba(595959aa)
 
+    gaps_in = 5
+    gaps_out = 10
+    border_size = 3
+    col.active_border = rgb(9c27b0) rgb(00bcd4) 30deg
+    col.inactive_border = rgba(595959aa)
     layout = dwindle
 }
 
 decoration {
-
-    rounding = 0
+    rounding = 5
     blur = yes
     blur_size = 3
     blur_passes = 1
     blur_new_optimizations = on
-
     drop_shadow = yes
     shadow_range = 4
     shadow_render_power = 3
@@ -79,50 +74,40 @@ master {
 }
 
 gestures {
-    workspace_swipe = off
+    workspace_swipe = true
 }
 
 device:epic-mouse-v1 {
     sensitivity = -0.5
 }
+
+
 # Workspace & Window rules
 windowrule = workspace 1 silent, firefox
-windowrule = workspace 2 silent, kitty
 windowrule = workspace 3 silent, thunar
 windowrule = workspace 4 silent, spotify
-windowrule = workspace 5 silent, discord
-windowrule = workspace 6 silent, telegram-desktop
+windowrulev2 = opacity 0.8 0.8,class:^(sublime-text-4)$
 windowrulev2 = opacity 0.8 0.8,class:^(kitty)$
-windowrulev2 = opacity 0.5 0.5,floating:1
-windowrulev2 = opacity 0.8 0.8,class:^(discord)$
 windowrulev2 = opacity 1.0 0.8,class:^(firefox)$
 windowrulev2 = opacity 0.8 0.8,class:^(thunar)$
 windowrulev2 = opacity 0.8 0.8,class:^(spotify)$
 windowrulev2 = opacity 0.8 0.8,class:^(telegram-desktop)$
-windowrulev2 = opacity 0.8 0.8,class:^(whatsie)$
-windowrulev2 = opacity 0.8 0.8,class:^(caprine)$
+windowrulev2 = opacity 0.8 0.8,class:^(discord)$
+windowrule = float,^(tlpui)$
 
 # Executing 
-exec-once = telegram-desktop
-exec-once = discord
 exec-once = firefox
-exec-once = kitty
 exec-once = thunar
 exec-once = spotify
 exec-once = waybar
-exec-once = hyprpaper
+exec-once = swaybg -i ~/Wallpaper/skull.jpg
+exec-once = mako
+
 
 # MainMod key
 $mainMod = SUPER
 
-# Window resizing
-binde = $mainMod SHIFT, right, resizeactive, 10 0
-binde = $mainMod SHIFT, left, resizeactive, -10 0
-binde = $mainMod SHIFT, up, resizeactive, 0 -10
-binde = $mainMod SHIFT, down, resizeactive, 0 10
-
 # Default keybinds
-bind = ,Print,exec,hyprshot -m region --clipboard-only
 bind = $mainMod, Q, exec, kitty
 bind = $mainMod, C, killactive, 
 bind = $mainMod SHIFT, E, exit,
@@ -130,7 +115,10 @@ bind = $mainMod, V, togglefloating,
 bind = $mainMod, D, exec, wofi --show=drun
 bind = $mainMod, P, pseudo, # dwindle
 bind = $mainMod, J, togglesplit, # dwindle
-bind = $mainMod, T, exec, ~/.config/waybar/scripts/baraction 
+bind = $mainMod, T, exec, ~/.config/waybar/scripts/baraction
+bind = ,Print, exec, hyprshot --clipboard-only --mode region
+bind = $mainMod, E,exec,~/.config/wofi/wofi-emoji
+bind = $mainMod, L,exec,swaylock
 
 # Move focus with mainMod + arrow keys
 bind = $mainMod, left, movefocus, l
@@ -166,17 +154,34 @@ bind = $mainMod SHIFT, 0, movetoworkspace, 10
 bind = $mainMod, mouse_down, workspace, e+1
 bind = $mainMod, mouse_up, workspace, e-1
 
+# Move windows with mainMod, Shift and arrow
+bind = $mainMod SHIFT, left, movewindow, l
+bind = $mainMod SHIFT, right, movewindow, r
+bind = $mainMod SHIFT, up, movewindow, u
+bind = $mainMod SHIFT, down, movewindow, d
+
 # Move/resize windows with mainMod + LMB/RMB and dragging
 bindm = $mainMod, mouse:272, movewindow
 bindm = $mainMod, mouse:273, resizewindow
 
-# Non XF86 Keyboards keybinding using mainMod
+# XF86 Controls
 bind = $mainMod, F2, exec, playerctl --player=spotify play-pause
 bind = $mainMod, F3, exec, playerctl next
 bind = $mainMod, F1, exec, playerctl previous
-bind = $mainMod, F5, exec, pactl set-sink-mute @DEFAULT_SINK@ toggle
-binde = $mainMod,F6, exec, pactl set-sink-volume @DEFAULT_SINK@ -5%
-binde = $mainMod,F7, exec, pactl set-sink-volume @DEFAULT_SINK@ +5%
-bind = $mainMod, F8, exec, pactl set-source-mute @DEFAULT_SOURCE@ toggle
-binde = $mainMod,F9, exec, brightnessctl s +5%
-binde = $mainMod,F10, exec, brightnessctl s 5%- 
+bind = ,XF86AudioMute, exec, pactl set-sink-mute @DEFAULT_SINK@ toggle
+binde = ,XF86AudioLowerVolume, exec, pactl set-sink-volume @DEFAULT_SINK@ -5%
+binde = ,XF86AudioRaiseVolume, exec, pactl set-sink-volume @DEFAULT_SINK@ +5%
+bind = ,XF86AudioMicMute, exec, pactl set-source-mute @DEFAULT_SOURCE@ toggle
+binde = ,XF86MonBrightnessUp, exec, brightnessctl s +5%
+binde = ,XF86MonBrightnessDown, exec, brightnessctl s 5%-
+
+# Windows resize
+bind = $mainMod, R,submap,resize
+submap = resize
+binde = ,right,resizeactive, 10 0
+binde = ,left,resizeactive, -10 0
+binde = ,up,resizeactive, 0 -10
+binde = ,down,resizeactive, 0 10
+bind = ,escape,submap,reset
+submap = reset
+
